# vibe-colab

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: colab_quickstart.py
src/vibe_env/: __init__.py  core.py
