[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vibe-env"
version = "0.1.0"
description = "Turn Google Colab into a Vibe Coding powerhouse with a Cursor-like IDE, Ollama models, and cloud tunneling."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Vibe Env Team"}
]
keywords = ["colab", "vibe-coding", "ollama", "code-server", "cloudflare", "ide"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
]

dependencies = [
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "requests>=2.31.0",
    "rich>=13.0.0",
    "psutil>=5.9.0",
    "huggingface-hub>=0.20.0",
]

[project.optional-dependencies]
unsloth = ["unsloth>=2024.1"]
all = [
    "vibe-env[unsloth]",
]

[project.urls]
Homepage = "https://github.com/MeowMan007/vibe-colab"
Repository = "https://github.com/MeowMan007/vibe-colab"
Issues = "https://github.com/MeowMan007/vibe-colab/issues"

[tool.setuptools.packages.find]
where = ["src"]
